gst-inspect: Pipe stdout to less if not piped already

https://bugzilla.gnome.org/show_bug.cgi?id=797344